# aureme_docker

./: .gitattributes  .gitigniore  Dockerfile  aureme  release.txt  update_task.txt
docs/: AuReMe_documentation_v9.docx  AuReMe_documentation_v9.rst  aureme.rst  conf.py  docker.rst  faq.rst  index.rst
docs/_build/doctrees/: AuReMe_documentation_v9.doctree  aureme.doctree  docker.doctree  environment.pickle  faq.doctree  index.doctree
docs/_build/html/: .buildinfo  AuReMe_documentation_v9.html  aureme.html  docker.html  faq.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: aureme.rst.txt  docker.rst.txt  faq.rst.txt  index.rst.txt
docs/pictures/: docker_cmd.pptx
programs/mcl-02-063/: AUTHORS  Makefile  Makefile.am  NEWS  README  bootstrap  config.cache  config.h  config.status  configure.in  install-sh
programs/mcl-02-063/doc/: Makefile  Makefile.am  mcl.zmr  mcl.zmt  mcx.zmr  mcx.zmt  mcxformat.zmr  mcxformat.zmt
programs/mcl-02-063/graphs/: Makefile  Makefile.am
programs/mcl-02-063/intalg/: Makefile  Makefile.am
programs/mcl-02-063/mcl/: Makefile  Makefile.am
programs/mcl-02-063/nonema/: Makefile  Makefile.am
programs/mcl-02-063/shcl/: Makefile  Makefile.am  clmconf  clmdist  clminfo  clmmeet
programs/mcl-02-063/shmcl/: Makefile  Makefile.am  mcl
programs/mcl-02-063/shmcx/: Makefile  Makefile.am  mcx
programs/mcl-02-063/shmx/: Makefile  Makefile.am  mcxconvert  mcxsubs
programs/mcl-02-063/shtest/: Makefile  Makefile.am  hashfile
programs/mcl-02-063/util/: Makefile  Makefile.am
programs/mcl-02-063/zoem/: Makefile  Makefile.am  zoem
programs/pantograph/: CHANGES.txt  README.rst  README.txt  setup.py
programs/pantograph/pantograph/: __init__.py  inparanoid2rel.py  omcl2rel.py  pathtastictools.py  projector.py
programs/pantograph/pantograph.egg-info/: PKG-INFO  SOURCES.txt
programs/template_inparanoid_4.1/: README.nico  inparanoid.pl  unquote.sh
programs/template_omcl_1.4/: LOG  clean.ls  orthomcl.pl  orthomcl_module.pm
run_template/aureme_template/: Makefile  README  aureme.conf  config.txt  full_log.txt  log.txt
run_template/aureme_template/analysis/flux_analysis/: draft_curation_2.txt  draft_curation_2_log.txt
run_template/aureme_template/growth_medium/: default_artefacts_metacyc_20.0.txt
run_template/aureme_template/orthology_based_reconstruction/.fr-Co7vJ3/tisochrysis_lutea/orthology_based_reconstruction/athaliana/: athaliana.sbml  dict_genes.txt
run_template/aureme_template/orthology_based_reconstruction/.fr-Co7vJ3/tisochrysis_lutea/orthology_based_reconstruction/creinhardtii/: creinhardtii.sbml
(+36816 files in other folders)
