## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.7 2001/12/18 19:23:13 flux Exp $

INCLUDES = -I$(top_srcdir)

bin_PROGRAMS = mcxconvert mcxsubs
mcxconvert_SOURCES = mcxconvert.c
mcxsubs_SOURCES = mcxsubs.c

LDADD = ../mcl/libmcl.a ../nonema/libnonema.a ../intalg/libintalg.a ../util/libutil.a

